--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,70 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pé Confortavel</title>
+    
+    <!-- define e insere um favicon no documento HTML -->
+    <link href="" rel="shortcut icon">
+
+    <!-- versao gratuita do Font Awesome icons-->
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap -->
+    <!-- insira este conteudo aqui que representa o CSS do Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <!-- Google  icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- <link href="" rel="stylesheet"> -->
 </head>
 <body>
-    
+    <header class="container px-0">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light px-0">
+
+            <!-- logo -->
+            <div>
+                <a class="navbar-brand mx-auto">
+                    <img src="">
+                </a>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynavbar"
+                aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Navegação Alternativa">
+                Menu <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
+                <div class="navbar-nav">
+                    <a href="/" class="nav-link">Início</a>
+                    <a href="" class="nav-link">Tipos de Atividade</a>
+                    <a href="" class="nav-link">Títulos</a>
+                    <a href="" class="nav-link">Alunos</a>
+                    <a href="" class="nav-link">Instrutor</a>
+                    <a href="" class="nav-link">Turmas</a>
+                    <a href="" class="nav-link">Contato</a>
+                </div>
+            </div>
+        </nav>
+
+    </header>
+
+    <div class="container">
+  <h1>My First Bootstrap Page</h1>
+  <p>This is some text.</p>
+</div>
+
+    <footer>
+
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
 </body>
 </html>
