commit final do dia 01-06-25

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,15 +38,15 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
-                <div class="navbar-nav">
-                    <a href="/" class="nav-link">Início</a>
-                    <a href="" class="nav-link">Tipos de Atividade</a>
-                    <a href="" class="nav-link">Títulos</a>
-                    <a href="" class="nav-link">Alunos</a>
-                    <a href="" class="nav-link">Instrutor</a>
-                    <a href="" class="nav-link">Turmas</a>
-                    <a href="" class="nav-link">Contato</a>
-                </div>
+                <select class="navbar-nav">
+                    <option href="/" class="nav-link">Início</option>
+                    <option href="" class="nav-link">Tipos de Atividade</option>
+                    <option href="" class="nav-link">Títulos</option>
+                    <option href="" class="nav-link">Alunos</option>
+                    <option href="" class="nav-link">Instrutor</option>
+                    <option href="" class="nav-link">Turmas</option>
+                    <option href="" class="nav-link">Contato</option>
+                </select>
             </div>
         </nav>
 
