--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -11,7 +11,7 @@
     <title>Pé Confortavel</title>
     
     <!-- define e insere um favicon no documento HTML -->
-    <link href="" rel="shortcut icon">
+    <link href="{% static 'img/pngtree-shoes-sneakers-illustration-sketch-png-image_6844974(1).png' %}" rel="shortcut icon">
 
     <!-- versao gratuita do Font Awesome icons-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -26,6 +26,7 @@
 
     <!-- <link href="" rel="stylesheet"> -->
      <link href="{% static 'css/my-style.css' %}" rel="stylesheet">
+     <link href="{% static 'css/my-slides.css' %}" rel="stylesheet">
 </head>
 <body>
     <header class="container px-0">
@@ -34,7 +35,7 @@
             <!-- logo -->
             <div>
                 <a class="navbar-brand mx-auto">
-                    <img src="">
+                    <img class="imgbck" src="{% static 'img/pngtree-shoes-sneakers-illustration-sketch-png-image_6844974(1).png' %}">
                 </a>
             </div>
 
