--- a/static/css/my-style.css
+++ b/static/css/my-style.css
@@ -6,8 +6,7 @@
         }
         
         body {
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #778ca1;
         }
         
         header {
@@ -72,6 +71,10 @@
             margin-bottom: 30px;
         }
         
+        .hero h1 {
+            font-family: 'Courier New', Courier, monospace;
+        }
+
         .hero h2 {
             color: #2c3e50;
             margin-bottom: 20px;
@@ -83,21 +86,14 @@
             padding: 50px 20px;
         }
 
-        .hero {
-            text-align: center;
-            padding: 50px 20px;
-            background-color: #d8e3e5;
-            border-radius: 8px;
-            margin-bottom: 30px;
+        .hero input {
+            
+            align-content:center;
         }
 
         .showslide {
             padding: 10px 0;
-            text-align: center;
-            padding: 50px 20px;
-            background-color: #d8e3e5;
-            border-radius: 8px;
-            margin-bottom: 30px;
+            
         }
         
         footer {
