--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -31,8 +31,7 @@
 <body>
     <header class="container px-0">
          <nav class="navbar navbar-expand-lg navbar-light bg-light px-0">
-
-            <!-- logo -->
+        <!-- logo -->
             <div>
                 <a class="navbar-brand mx-auto">
                     <img class="imgbck" src="{% static 'img/pngtree-shoes-sneakers-illustration-sketch-png-image_6844974(1).png' %}">
@@ -70,5 +69,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
     </script>
+
+    {% block javascript_complementar %}
+    {% endblock %}
+    
 </body>
 </html>
