segundo commit dia 16-06-25

--- a/clientes/templates/clientes/atualizarClientes.html
+++ b/clientes/templates/clientes/atualizarClientes.html
@@ -31,7 +31,7 @@
 
     <!-- formulario HTML -->
     <section class="hero">
-    <form id="idFrmClientesAtualizarForm" name="frmClientesAtualizarForm" action="{% url 'clientes:atualizar_clientes' %}" method="POST" class="my-label-color-purple">
+    <form name="ClientesAtualizarForm" action="{% url 'clientes:atualizar_clientes' %}" method="post" class="my-label-color-purple">
         {% csrf_token %}
         
         <div class="row mb-3">
@@ -45,8 +45,9 @@
     <div class="row mb-3">
         <div class="col-md-6">
             <label for="idTxtCpf" class="form-label">CPF</label>
-            <input class="form-control" type="text" id="idTxtCpf" name="Cpf" 
-                   value="{{clientes.cpf}}" maxlength="11" readonly>
+            <input type="hidden" name="cpf" value="{{ clientes.cpf }}">  <!-- Name matches form field -->
+            <input class="form-control" type="text" id="idTxtCpf" 
+                    value="{{ clientes.cpf }}" maxlength="11" readonly>
         </div>
         <div class="col-md-6">
             <label for="idTxtTelefone" class="form-label">Telefone</label>
@@ -111,8 +112,9 @@
         </div>
         <div class="col-md-6">
             <label for="idTxtSenha" class="form-label">Senha</label>
-            <input class="form-control" type="password" id="idTxtSenha" name="senha" 
-                   placeholder="Crie uma senha" maxlength="256" required>
+            <input type="hidden" name="senha" value="{{ clientes.senha }}">
+            <input class="form-control" type="password" id="idTxtSenha" 
+                   placeholder="Deixe em branco para manter a senha atual" maxlength="256">
         </div>
     </div>
 
