--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <a href="/" class="nav-link">Início</a>
                     <a href="{% url 'clientes:cadastro' %}" class="nav-link">Clientes</a>
                     <a href="{% url 'contato:contato' %}" class="nav-link">Contato</a>
-                    <a href="{% url 'fornecedores:cadastrar' %}" class="nav-link">Fornecedores</a>
+                    <a href="{% url 'fornecedores:cadastro' %}" class="nav-link">Fornecedores</a>
                     <a href="{% url 'login:login' %}" class="nav-link">Login</a>
                     <a href="{% url 'produtos:cadastrar' %}" class="nav-link">Produtos</a>
                     <a href="{% url 'venda:cadastrar' %}" class="nav-link">Venda</a>
