--- a/fornecedores/templates/fornecedores/cadastroFornecedores.html
+++ b/fornecedores/templates/fornecedores/cadastroFornecedores.html
@@ -1,1 +1,58 @@
 {% extends "base_template.html" %}
+{% load static %}
+
+    {% block title %}
+        <title>Pé Confortavel</title>
+    {% endblock %}
+
+
+
+            {% block menu %}
+            <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
+                <div class="navbar-nav">
+                    <a href="/" class="nav-link">Início</a>
+                    <a href="{% url 'fornecedores:cadastro' %}" class="nav-link">Cadastro</a>
+                    <a href="{% url 'fornecedores:listar' %}" class="nav-link">Listar</a>
+                </div>
+            </div>
+        </nav>
+            {%  endblock %}
+
+            
+        {% block titulo_pagina %}
+        
+        
+        {% endblock %}
+
+        {% block corpo %}
+        <main class="container m-2 w-75 mx-auto my-font-family">
+
+    <div class="hero">
+        <div class="col text-center m-0">
+            <h1 class="mt-2 mb-5 my-h2">Cadastro de Fornecedores</h1>
+        </div>
+    </div>
+
+    <!-- formulario HTML -->
+    <section class="hero">
+    <form name="frmCadastrar" action="{% url 'fornecedores:cadastrar' %}" method="post" class="my-label-color-purple">
+    {% csrf_token %}
+
+    
+        
+            <label for="idNome" class="form-label">nome</label>
+            <input class="form-control" type="text" id="idNome" name="nome" 
+                   placeholder="Informe o nome" maxlength="11" required>
+        </div>
+    
+
+    <div class="row mt-4">
+        <div class="col-12 text-center">
+            <button type="reset" class="btn btn-outline-secondary me-2">Limpar</button>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </div>
+    </div>
+</form>
+    </section>
+
+        {% endblock %}
