--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                     <a href="{% url 'contato:contato' %}" class="nav-link">Contato</a>
                     <a href="{% url 'fornecedores:cadastro' %}" class="nav-link">Fornecedores</a>
                     <a href="{% url 'login:login' %}" class="nav-link">Login</a>
-                    <a href="{% url 'produtos:cadastrar' %}" class="nav-link">Produtos</a>
+                    <a href="{% url 'produtos:cadastro' %}" class="nav-link">Produtos</a>
                     <a href="{% url 'venda:cadastrar' %}" class="nav-link">Venda</a>
                 </div>
             </div>
