commit final dia 17-06-25

--- a/fornecedores/templates/fornecedores/cadastroFornecedores.html
+++ b/fornecedores/templates/fornecedores/cadastroFornecedores.html
@@ -39,7 +39,7 @@
     {% csrf_token %}
 
     
-        
+        <div>
             <label for="idNome" class="form-label">nome</label>
             <input class="form-control" type="text" id="idNome" name="nome" 
                    placeholder="Informe o nome" maxlength="11" required>
