--- a/produtos/templates/produtos/listarProdutos.html
+++ b/produtos/templates/produtos/listarProdutos.html
@@ -73,14 +73,14 @@
                 <tr>
                     <td> {{ produtos.codigo }} </td>
                     <td> {{ produtos.nome }} </td>
-                    <td> {{ produtos.preco_Compra }} </td>
-                    <td> {{ produtos.preco_Venda }} </td>
+                    <td> {{ produtos.precoCompra }} </td>
+                    <td> {{ produtos.precoVenda }} </td>
                     <td> {{ produtos.cor }} </td>
                     <td> {{ produtos.imagem }} </td>
-                    <td> {{ produtos.fornecedores_codigo }} </td>
+                    <td> {{ produtos.fornecedoresCodigo.nome }} </td>
                     <td>
                         <a href="{% url 'produtos:carregar_produtos' produtos.codigo %}" class="btn btn-mini"><i class="far fa-edit"></i></a> 
-                        <button type="button" class="btn" role="button" data-target="#modalExcluirprodutos"
+                        <button type="button" class="btn" role="button" data-target="#modalExcluirProdutos"
                                 data-toggle="modal"  
                                 data-nome="{{ produtos.nome }}" 
                                 data-url="{% url 'produtos:excluir_produtos' produtos.codigo %}">
